--- a/Word Cloud/App.xaml
+++ b/Word Cloud/App.xaml
@@ -2,8 +2,15 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Word_Cloud"
+             xmlns:views="clr-namespace:Word_Cloud.Views"
+             xmlns:vm="clr-namespace:Word_Cloud.ViewModels"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <DataTemplate DataType="{x:Type vm:TextBodyViewModel}">
+            <views:TextBodyView/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:TitlePageViewModel}">
+            <views:TitlePageView/>
+        </DataTemplate>
     </Application.Resources>
 </Application>
